# cpp-playground

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  ORDERBOOK_README.md  PYTHON_SETUP.md  README.md  build.sh  compile_commands.json  flake.nix  pyproject.toml  setup.py  setup.sh  shell.nix  test.py
.claude/: settings.local.json
include/matching_engine/matching_engine/matching/: orderbook.hpp
include/pg/asio_test/: asio_test.hpp
include/pg/language_practice/: design_pattern.hpp  some_ds.hpp  tips.hpp  type_erasure.hpp
pg/: CMakeLists.txt
pg/include/pg/language_practice/: const_value.hpp  factory.hpp  idioms.hpp  template.hpp  utils.hpp
pg/src/language_practice/: const_value.cpp
projects/ds/: CMakeLists.txt  README.md
projects/ds/include/ds/: ds.hpp
projects/ds/include/ds/graph/: graph.hpp
projects/ds/include/ds/list/: list.hpp
projects/ds/include/ds/tree/: tree.hpp
projects/ds/tests/: ds_test_main.cpp  graph_test.cpp  list_test.cpp  tree_test.cpp  trie_test.cpp
projects/matching_engine/: CMakeLists.txt
projects/matching_engine/include/matching_engine/core/: types.hpp
projects/matching_engine/include/matching_engine/matching/: async_engine.hpp
projects/matching_engine/include/matching_engine/scheduler/: coro_scheduler.hpp
projects/matching_engine/tests/: coro_matching_test.cpp
python/: README.md  requirements.txt
python/examples/: basic_usage.py  benchmark.py
python/tests/: __init__.py  test_orderbook.py
src/asio_test/: asio_test.cpp  asio_test.hpp
src/ds/: README.md  ds.hpp
src/ds/graph/: graph_test.cpp
src/ds/list/: list_test.cpp
src/ds/tree/: tree.hpp  tree_test.cpp
src/ds/trie/: trie.hpp  trie_test.cpp
src/language_practice/: const_value.cpp  const_value.hpp  design_pattern.hpp  factory.hpp  idioms.hpp  singleton.hpp  some_ds.hpp  template.hpp  tips.hpp  type_erasure.hpp  utils.hpp
src/matching_engine/core/: types.hpp
src/matching_engine/memory/: async_ring_buffer.hpp
src/orderbook/: orderbook.hpp
src/orderbook/allocator/: slab_allocator.hpp
src/orderbook/concurrent/: mpsc_queue.hpp  spinlock.hpp
src/orderbook/core/: matching_engine.hpp  order.hpp  price_level.hpp
src/orderbook/storage/: intrusive_storage.hpp  storage_policy.hpp
src/orderbook_py/: bindings.cpp
src/pg/asio_test/: asio_test.cpp
